--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "test": "npm run test:html",
+    "test": "npm run test:*",
     "test:html": "html-validate *.html",
+    "test:js": "eslint js/",
     "build": "npm install && npm-run-all build:* && npm run test",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "browser-sync": "^2.27.5",
+    "eslint": "^8.0.1",
     "html-validate": "^6.0.2",
     "mkdirp": "^1.0.4",
     "node-sass": "^6.0.1",
