--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,9 @@
         "quotes": [
             "error",
             "single",
-            {"allowTemplateLiterals": true}
+            {
+                "allowTemplateLiterals": true
+            }
         ],
         "semi": [
             "error",
@@ -27,5 +29,9 @@
         "no-console": [
             "off"
         ]
+
+    },
+    "globals": {
+        "Handlebars": false
     }
 }
